--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,10 +13,8 @@
     <ListView
         android:id="@+id/oldTweetsList"
         android:layout_width="fill_parent"
-        android:layout_height="263dp"
-        android:layout_weight="1"
+        android:layout_height="230dp"
         android:scrollbars="vertical" >
-
     </ListView>
 
     <TextView
@@ -24,7 +22,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
-    
+
     <EditText
         android:id="@+id/body"
         android:layout_width="fill_parent"
@@ -42,5 +40,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/save" />
+
+    <Button
+        android:id="@+id/new_activity"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_weight="0.40"
+        android:onClick="showSecondActivity"
+        android:text="@string/new_activity" />
 
 </LinearLayout>
